Task2/Applications/juice_shop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juice-shop
  labels:
    name: juice-shop
