Task2/Applications/juice_shop/service-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-direct
  namespace: juice-shop
  labels:
    app: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 30081
    protocol: TCP
  type: NodePort
